2008/03/01
	15. Added class CflicDistance that provides an approximation of the length of flic direct
	path between two configurations.
	14. Moved static functions of flicDirectPath.cpp into a class CflicManager in order to use 
	these functions in other files.
	
2008/02/28
        13. Added CkwsPlusDistance class. Enable user to use other types of steering method for calculating distance. 

2008/02/19
	12. Added CkwsPlusRoadmap class. Enable user to remove a set of nodes and a set of edges from a roadmap.

2008/01/09
	11. In flicDirectPath, curvature bound is enforced at the creation of the direct path.
	
2007/12/18
	10.Added CkwsPlusLTRdmBuilder class. Derives from any diffusing
	roadmap builder class and implements a local tree diffusing method.
2007/11/22
	9.Added CkwsPlusPCARdmBuilder class. Derives from any diffusing
	roadmap builder class and implements a principal component
	analysis to speed up the diffusion process. Needs lapack installed.

2007/11/14
	8.Remove unused classes kwsPlusRoadmap and kwsPlusDrawRdmBuilderDelegate
	7.Minor Changes 
	6.Merge with git+ssh://softs.laas.fr/git/jrl/kwsPlus

2007/11/06
	5. Correct the reeds&sheppDirectPath Class :
	      - is now derivated from kwsPlusDirectPath
	      - you can acess to uStart and uEnd parameters which are configurated with extractTo and extractFrom
	      - when you get the RSvectorPartition is now taking count of the uStart and uEnd extracting parameters


2007/10/22
	4. Added a class to test whether a configuration constraint is continuous and is a projection.	
	
2007/10/17
	3. Reorganization of documentation.
	2. Added class CkwsPlusDirectPath that manages extraction and reverse of direct paths.
	
2007/10/16
	1. Added a class in unitTesting to test whether a configuration constraint is a projection.
	
2007/10/10
	kwsPlus release 1.1
	
2007/10/09
	1. Correct a bug in  findRsCurveNumInVector() : 
	   - put an Epsilon for the test else there is a bug when u ~= val 
	
2007/09/29